# Qt3D

./: 123.txt  CMakeLists.txt  Full.txt  GA.h  Icons.qrc  Partial.txt  README.md  SharedVertex.txt  appwindow.cpp  appwindow.h  big_scene.txt  cameracontroller.cpp  cameracontroller.h  cd_appwindow.cpp  cd_appwindow.h  cd_cameracontroller.cpp  cd_cameracontroller.h  cd_collisiondetector.cpp  cd_collisiondetector.h  cd_contur.cpp  cd_cube.cpp  cd_cubegraphicrepresentation.cpp  cd_cubemathrepresentation.h  cd_detector.cpp  cd_detector.h  cd_rectanglemathrepresentation.h  cd_scene.cpp  cd_scene.h  collisiondetector.cpp  collisiondetector.h  gaappwindow.cpp  gaappwindow.h  gacameracontroller.cpp  gacameracontroller.h  gacollisiondetector.cpp  gacollisiondetector.h  gacube.cpp  gacube.h  gacubegraphicrepresentation.cpp  gacubegraphicrepresentation.h  (+52 more)
Tests/: CMakeLists.txt  tst_cd_api.cpp  tst_collision2D.cpp  tst_gacubemathrepresentation.cpp  tst_garectanglemathrepresentation.cpp
headers/: cd.h  cd_api.h  cd_appwindow.h  cd_cameracontroller.h  cd_collisiondetector.h  cd_contur.h  cd_cube.h  cd_cubegraphicrepresentation.h  cd_cubemathrepresentation.h  cd_detector.h  cd_objectmanager.h  cd_parser.h  cd_rectangle.h  cd_rectanglemathrepresentation.h  cd_scene.h
include/: cd.h  cd_contur.h  cd_cube.h  cd_cubegraphicrepresentation.h  cd_objectmanager.h  cd_parser.h  cd_rectangle.h  ga.h
source/: CMakeLists.txt  cd_api.cpp  cd_appwindow.cpp  cd_cameracontroller.cpp  cd_collisiondetector.cpp  cd_contur.cpp  cd_cube.cpp  cd_cubegraphicrepresentation.cpp  cd_cubemathrepresentation.cpp  cd_detector.cpp  cd_objectmanager.cpp  cd_parser.cpp  cd_rectangle.cpp  cd_rectanglemathrepresentation.cpp  cd_scene.cpp  main.cpp
src/: cd_cubemathrepresentation.cpp  cd_objectmanager.cpp  cd_parser.cpp  cd_rectangle.cpp  cd_rectanglemathrepresentation.cpp  main.cpp
